--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -1,49 +1,110 @@
 .navigation {
-    position: absolute;
-    top: 32px;
-    left: 480px;
-    width: 768px;
-    height: 60px;
-    background: rgba(243, 249, 247, 0.8);
-    border-radius: 8px;
-    // outline: 2px solid tomato;
+    @media screen and (min-width: 1440px) {
+        display: block;
+        position: absolute;
+        top: 32px;
+        left: 380px;
+        width: 650px;
+        height: 52px;
+        background: rgba(243, 249, 247, 0.8);
+        border-radius: 8px;
+    }
+
+    @media screen and (min-width: 1728px) {
+        left: 480px;
+        width: 768px;
+        height: 60px;
+    }
 
     &_list {
-        display: flex;
-        justify-content: space-between;
-        padding: 12px 16px;
+        display: none;
+
+        @media screen and (min-width: 834px) {}
+
+        @media screen and (min-width: 1440px) {
+            display: flex;
+            justify-content: space-between;
+            padding: 12px 16px;
+        }
     }
 
     &_list-item {
-        &:last-child {
-            margin-top: 4px;
+        @media screen and (min-width: 1440px) {
+            &:last-child {
+                width: 20px;
+                height: 20px;
+                margin-right: 16px;
+            }
         }
     }
 
     &_list-link {
-        font-family: var(--text_font);
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 100%;
-        letter-spacing: 0.05em;
-        color: var(--text_color);
+        @media screen and (min-width: 1440px) {
+            font-family: var(--text_font);
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 100%;
+            letter-spacing: 0.05em;
+            color: var(--text_color);
 
-        &:hover,
-        :focus {
-            font-weight: 600;
-            border-bottom: 2px dashed var(--second-accent_color);
+            &:hover,
+            :focus {
+                font-weight: 600;
+                border-bottom: 2px dashed var(--second-accent_color);
+            }
         }
 
-        &::after {
-            content: ' ';
-            position: absolute;
-            // border-bottom: 20px;
-            // width: 100%;
-            // height: 2px;
-            // left: 0;
-            // bottom: 15px;
-            background-color: var(--second-accent_color);
+        @media screen and (min-width: 1728px) {
+            font-size: 20px;
         }
+    }
+
+    &_list-icon {
+        @media screen and (min-width: 1440px) {
+            width: 28px;
+            height: 28px;
+            fill: var(--first-accent_color);
+            fill-opacity: 0.6;
+
+            &:hover,
+            :focus {
+                fill-opacity: 1;
+            }
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 32px;
+            height: 32px;
+        }
+    }
+
+    &__burger-menu {
+        position: absolute;
+        top: 16px;
+        left: 334px;
+        width: 40px;
+        height: 40px;
+        border: 1px solid #F1D0D9;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
+        background-color: #FFF3F6;
+        border-color: var(--second-accent_color);
+
+        @media screen and (min-width: 834px) {
+            top: 24px;
+            left: 750px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            display: none;
+        }
+    }
+
+    &_burger-icon {
+        width: 30px;
+        height: 20px;
+        margin: 10px auto;
+        fill: var(--first-accent_color);
     }
 }
