--- a/css/main.css
+++ b/css/main.css
@@ -222,19 +222,21 @@ body {
     font-size: 20px;
   }
 }
-.header_contacts-svg {
+.header_contacts-icon {
   margin-top: 16px;
   margin-bottom: 12px;
   width: 44px;
   height: 44px;
   fill: var(--first-accent_color);
+  fill-opacity: 0.6;
 }
-.header_contacts-svg:hover,
-.header_contacts-svg :focus {
-  width: 100px;
+.header_contacts-icon:hover,
+.header_contacts-icon :focus {
+  width: 48px;
+  fill-opacity: 1;
 }
 @media screen and (min-width: 1440px) {
-  .header_contacts-svg {
+  .header_contacts-icon {
     margin-top: 24px;
     margin-bottom: 18px;
     width: 52px;
@@ -242,10 +244,26 @@ body {
   }
 }
 .header_contacts-number--first {
-  color: var(--title-color);
+  display: none;
+}
+@media screen and (min-width: 834px) {
+  .header_contacts-number--first {
+    display: block;
+    color: var(--title-color);
+  }
+  .header_contacts-number--first:hover,
+  .header_contacts-number--first :focus {
+    color: var(--first-accent_color);
+  }
 }
 .header_contacts-number--second {
-  padding: 16px 0 4px 0;
+  display: none;
+}
+@media screen and (min-width: 834px) {
+  .header_contacts-number--second {
+    display: block;
+    padding: 16px 0 4px 0;
+  }
 }
 @media screen and (min-width: 1728px) {
   .header_contacts-number--second {
@@ -253,9 +271,15 @@ body {
   }
 }
 .header_contacts-social {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 150%;
+  display: none;
+}
+@media screen and (min-width: 834px) {
+  .header_contacts-social {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+  }
 }
 @media screen and (min-width: 1440px) {
   .header_contacts-social {
@@ -292,31 +316,31 @@ body {
 }
 .header_title-box {
   position: absolute;
-  top: 212px;
+  top: 236px;
   left: 28px;
   width: 334px;
   height: 96px;
   padding: 12px 21px;
-  background: linear-gradient(95.97deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
-  -webkit-backdrop-filter: blur(7.5px);
-          backdrop-filter: blur(7.5px);
+  background: rgba(255, 255, 255, 0.6);
   border-radius: 20px;
-  outline: 1px solid tomato;
 }
 @media screen and (min-width: 834px) {
   .header_title-box {
-    top: 444px;
+    top: 512px;
     left: 83px;
     width: 668px;
     height: 216px;
     padding: 35px 42px;
-    border-radius: 20px;
+    border-radius: 40px;
   }
 }
 @media screen and (min-width: 1440px) {
   .header_title-box {
     top: 372px;
     left: 686px;
+    background: linear-gradient(95.97deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+    -webkit-backdrop-filter: blur(7.5px);
+            backdrop-filter: blur(7.5px);
   }
 }
 @media screen and (min-width: 1728px) {
@@ -350,27 +374,68 @@ body {
 }
 .header_delivery {
   position: absolute;
-  top: 600px;
-  left: 1471px;
+  top: 312px;
+  left: 235px;
   font-family: var(--secondary_font);
   font-style: italic;
-  letter-spacing: 0.05em;
+  font-size: 18px;
+  line-height: 100%;
   text-transform: lowercase;
   color: var(--text_color);
-  transform: rotate(-15deg);
+}
+@media screen and (min-width: 834px) {
+  .header_delivery {
+    top: 684px;
+    left: 529px;
+    font-size: 32px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header_delivery {
+    top: 600px;
+    left: 1177px;
+    font-size: 24px;
+    line-height: 150%;
+    letter-spacing: 0.05em;
+    transform: rotate(-15deg);
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_delivery {
+    left: 1468px;
+  }
 }
 .header_transition {
+  position: absolute;
+  top: 360px;
+  left: 45px;
+  width: 300px;
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  top: 803px;
-  left: 1360px;
-  width: 288px;
-  height: 6px;
+}
+@media screen and (min-width: 834px) {
+  .header_transition {
+    top: 800px;
+    left: 267px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header_transition {
+    top: 803px;
+    left: 1131px;
+    width: 209px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_transition {
+    top: 802px;
+    left: 1360px;
+    width: 288px;
+  }
 }
 .header_transition-list {
   width: 60px;
-  height: 6px;
+  height: 8px;
   background-color: var(--second-accent_color);
   border-radius: 4px;
 }
@@ -379,40 +444,119 @@ body {
   background-color: var(--first-accent_color);
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
 }
+@media screen and (min-width: 1440px) {
+  .header_transition-list {
+    width: 40px;
+    height: 6px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_transition-list {
+    width: 60px;
+  }
+}
 
-.navigation {
-  position: absolute;
-  top: 32px;
-  left: 480px;
-  width: 768px;
-  height: 60px;
-  background: rgba(243, 249, 247, 0.8);
-  border-radius: 8px;
+@media screen and (min-width: 1440px) {
+  .navigation {
+    display: block;
+    position: absolute;
+    top: 32px;
+    left: 380px;
+    width: 650px;
+    height: 52px;
+    background: rgba(243, 249, 247, 0.8);
+    border-radius: 8px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .navigation {
+    left: 480px;
+    width: 768px;
+    height: 60px;
+  }
 }
 .navigation_list {
-  display: flex;
-  justify-content: space-between;
-  padding: 12px 16px;
+  display: none;
 }
-.navigation_list-item:last-child {
-  margin-top: 4px;
+@media screen and (min-width: 1440px) {
+  .navigation_list {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 16px;
+  }
 }
-.navigation_list-link {
-  font-family: var(--text_font);
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 100%;
-  letter-spacing: 0.05em;
-  color: var(--text_color);
+@media screen and (min-width: 1440px) {
+  .navigation_list-item:last-child {
+    width: 20px;
+    height: 20px;
+    margin-right: 16px;
+  }
 }
-.navigation_list-link:hover,
-.navigation_list-link :focus {
-  font-weight: 600;
-  border-bottom: 2px dashed var(--second-accent_color);
+@media screen and (min-width: 1440px) {
+  .navigation_list-link {
+    font-family: var(--text_font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 0.05em;
+    color: var(--text_color);
+  }
+  .navigation_list-link:hover,
+  .navigation_list-link :focus {
+    font-weight: 600;
+    border-bottom: 2px dashed var(--second-accent_color);
+  }
 }
-.navigation_list-link::after {
-  content: " ";
+@media screen and (min-width: 1728px) {
+  .navigation_list-link {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .navigation_list-icon {
+    width: 28px;
+    height: 28px;
+    fill: var(--first-accent_color);
+    fill-opacity: 0.6;
+  }
+  .navigation_list-icon:hover,
+  .navigation_list-icon :focus {
+    fill-opacity: 1;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .navigation_list-icon {
+    width: 32px;
+    height: 32px;
+  }
+}
+.navigation__burger-menu {
   position: absolute;
-  background-color: var(--second-accent_color);
+  top: 16px;
+  left: 334px;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #F1D0D9;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  background-color: #FFF3F6;
+  border-color: var(--second-accent_color);
+}
+@media screen and (min-width: 834px) {
+  .navigation__burger-menu {
+    top: 24px;
+    left: 750px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .navigation__burger-menu {
+    display: none;
+  }
+}
+.navigation_burger-icon {
+  width: 30px;
+  height: 20px;
+  margin: 10px auto;
+  fill: var(--first-accent_color);
 }/*# sourceMappingURL=main.css.map */
