--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -95,6 +95,12 @@
         }
     }
 
+    &_contacts-button {
+        border-color: transparent;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
 
     &_contacts-icon {
         margin-top: 16px;
@@ -274,6 +280,8 @@
         }
     }
 
+
+
     &_transition {
         position: absolute;
         top: 360px;
@@ -301,9 +309,14 @@
     }
 
     &_transition-list {
+        display: contents;
+    }
+
+    &_transition-link {
         width: 60px;
         height: 8px;
         background-color: var(--second-accent_color);
+        border: 1px solid white;
         border-radius: 4px;
 
         &:hover,
@@ -321,4 +334,18 @@
             width: 60px;
         }
     }
+}
+
+.carousel {
+    display: flex;
+    overflow: hidden;
+    // width: 100%;
+    /* Добавляем ширину контейнера для карусели */
+}
+
+.carousel img {
+    width: 25%;
+    /* Равномерно распределяем ширину изображений в карусели */
+    height: auto;
+    transition: transform 0.5s ease-in-out;
 }
