--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,8 @@
 
 //Header section
 @import 'layouts/header';
-@import 'layouts/navigation';
+@import 'components/navigation';
+@import 'components/carousel.scss';
 
 // Main sections
 
