--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ svg {
   padding: 0;
 }
 
+figure {
+  margin: 0;
+}
+
 img {
   display: block;
   min-width: 100%;
@@ -160,6 +164,64 @@ body {
 @media screen and (min-width: 1728px) {
   .header_image {
     width: 1248px;
+  }
+}
+.header_transition {
+  position: absolute;
+  top: 360px;
+  left: 45px;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (min-width: 834px) {
+  .header_transition {
+    top: 800px;
+    left: 267px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header_transition {
+    top: 803px;
+    left: 1131px;
+    width: 209px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_transition {
+    top: 802px;
+    left: 1360px;
+    width: 288px;
+  }
+}
+.header_transition-list {
+  display: contents;
+}
+.header_transition-link {
+  width: 60px;
+  height: 8px;
+  background-color: var(--second-accent_color);
+  border: 1px solid white;
+  border-radius: 4px;
+}
+.header_transition-link:hover,
+.header_transition-link :focus {
+  background-color: var(--first-accent_color);
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+}
+.header_transition-link.active {
+  background-color: var(--first-accent_color);
+  /* Цвет активной кнопки */
+}
+@media screen and (min-width: 1440px) {
+  .header_transition-link {
+    width: 40px;
+    height: 6px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .header_transition-link {
+    width: 60px;
   }
 }
 .header_balloon {
@@ -411,73 +473,6 @@ body {
     left: 1468px;
   }
 }
-.header_transition {
-  position: absolute;
-  top: 360px;
-  left: 45px;
-  width: 300px;
-  display: flex;
-  justify-content: space-between;
-}
-@media screen and (min-width: 834px) {
-  .header_transition {
-    top: 800px;
-    left: 267px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .header_transition {
-    top: 803px;
-    left: 1131px;
-    width: 209px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .header_transition {
-    top: 802px;
-    left: 1360px;
-    width: 288px;
-  }
-}
-.header_transition-list {
-  display: contents;
-}
-.header_transition-link {
-  width: 60px;
-  height: 8px;
-  background-color: var(--second-accent_color);
-  border: 1px solid white;
-  border-radius: 4px;
-}
-.header_transition-link:hover,
-.header_transition-link :focus {
-  background-color: var(--first-accent_color);
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
-}
-@media screen and (min-width: 1440px) {
-  .header_transition-link {
-    width: 40px;
-    height: 6px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .header_transition-link {
-    width: 60px;
-  }
-}
-
-.carousel {
-  display: flex;
-  overflow: hidden;
-  /* Добавляем ширину контейнера для карусели */
-}
-
-.carousel img {
-  width: 25%;
-  /* Равномерно распределяем ширину изображений в карусели */
-  height: auto;
-  transition: transform 0.5s ease-in-out;
-}
 
 @media screen and (min-width: 1440px) {
   .navigation {
@@ -582,4 +577,16 @@ body {
   height: 20px;
   margin: 10px auto;
   fill: var(--first-accent_color);
+}
+
+.carousel {
+  display: flex;
+  overflow: hidden;
+  /* Добавляем ширину контейнера для карусели */
+}
+.carousel_carousel img {
+  width: 25%;
+  /* Равномерно распределяем ширину изображений в карусели */
+  height: auto;
+  transition: transform 0.5s ease-in-out;
 }/*# sourceMappingURL=main.css.map */
