--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,10 @@
 //Header section
 @import 'layouts/header';
 @import 'components/navigation';
-@import 'components/carousel.scss';
+@import 'components/carousel';
 
-// Main sections
+// Problems sections
+@import 'layouts/problems';
 
 
 // Footer-section
