--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,8 @@
 @import 'base/basic-settings';
 @import 'base/body';
 @import 'base/container';
-@import 'base/section';
+@import 'base/section-wide';
+@import 'base/section-narrow';
 @import 'utils/variable';
 @import 'utils/visually-hidden';
 
