--- a/sass/base/_section-wide.scss
+++ b/sass/base/_section-wide.scss
@@ -1,27 +1,29 @@
-.section {
-    width: 390px;
-    padding: 0 28px;
-    // width: 100%;
-    // padding: 0 20px;
+// Широкая секция
+.section-wide {
+    padding: 0 auto;
+    margin-top: 108px;
     // outline: 2px solid tomato;
 
-    // @media screen and (min-width: 390px) {
-    //     width: 390px;
-    //     padding: 0 28px;
-    // }
+    @media screen and (min-width: 390px) {
+        width: 390px;
+        padding: 0 28px;
+    }
 
     @media screen and (min-width: 834px) {
         width: 834px;
         padding: 0 60px;
+        margin-top: 120px;
     }
 
     @media screen and (min-width: 1440px) {
         width: 1440px;
         padding: 0 86px;
+        margin-top: 140px;
     }
 
     @media screen and (min-width: 1728px) {
         width: 1728px;
         padding: 0 80px;
+        margin-top: 160px;
     }
 }
