--- a/css/main.css
+++ b/css/main.css
@@ -677,6 +677,15 @@ body {
     transform: none;
   }
 }
+.problems__list-item p {
+  font-family: var(--text_font);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 200%;
+  text-align: center;
+  letter-spacing: 0.1em;
+  color: var(--text_color);
+}
 .problems__list-item > div {
   position: absolute;
   width: 244px;
@@ -711,32 +720,101 @@ body {
   color: var(--text_color);
 }
 .problems__list-balloon--1 {
-  margin-left: 300px;
+  margin-left: 15px;
+}
+@media screen and (min-width: 834px) {
+  .problems__list-balloon--1 {
+    margin-left: 132px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .problems__list-balloon--1 {
+    margin-left: 252px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .problems__list-balloon--1 {
+    margin-left: 300px;
+  }
 }
 .problems__list-balloon--2 {
-  margin-left: 984px;
+  display: none;
+}
+@media screen and (min-width: 834px) {
+  .problems__list-balloon--2 {
+    display: block;
+    margin-left: 450px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .problems__list-balloon--2 {
+    margin-left: 828px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .problems__list-balloon--2 {
+    margin-left: 984px;
+  }
 }
 .problems__list-balloon--3 {
-  margin-top: 624px;
-  margin-left: 213px;
+  margin-top: 252px;
+  margin-left: 146px;
 }
-.problems__list-balloon--4 {
-  margin-top: 416px;
-  margin-left: 642px;
+@media screen and (min-width: 834px) {
+  .problems__list-balloon--3 {
+    margin-top: 372px;
+    margin-left: 40px;
+  }
 }
-.problems__list-balloon--5 {
-  margin-top: 624px;
-  margin-left: 1071px;
+@media screen and (min-width: 1440px) {
+  .problems__list-balloon--3 {
+    margin-top: 488px;
+    margin-left: 194px;
+  }
 }
-.problems__list-text {
-  font-family: var(--text_font);
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 200%;
-  text-align: center;
-  letter-spacing: 0.1em;
-  color: var(--text_color);
+@media screen and (min-width: 1728px) {
+  .problems__list-balloon--3 {
+    margin-top: 624px;
+    margin-left: 213px;
+  }
 }
+@media screen and (min-width: 834px) {
+  .problems__list-balloon--4 {
+    margin-top: 284px;
+    margin-left: 291px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .problems__list-balloon--4 {
+    margin-top: 360px;
+    margin-left: 560px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .problems__list-balloon--4 {
+    margin-top: 416px;
+    margin-left: 642px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .problems__list-balloon--5 {
+    margin-top: 372px;
+    margin-left: 542px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .problems__list-balloon--5 {
+    margin-top: 488px;
+    margin-left: 926px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .problems__list-balloon--5 {
+    margin-top: 624px;
+    margin-left: 1071px;
+  }
+}
+
 .balloon-negative {
   padding: 144px 82px 0px 82px;
   background-image: url("/images/index/png/balloon-negative_mac.png");
